# i3bindings

./: .locals  README-EXAMPLES.txt  README-TEMPLATE.md  create_readme.py  input  pyproject.toml
.githooks/: pre-commit
i3bindings/: constants.py  io.py  tree_algorithms.py  tree_parser.py
tests/: i3bindings.test.py  test_end_to_end.py  test_i3bindings.py  test_tile.py  test_tree_parser.py  tile.test.py
tests/data/: end_to_end_input  end_to_end_output
tile/: constants.py  tree_algorithms.py  tree_parser.py
